Tue Dec 14 03:01:43 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/symbol-test.t,perl/util.i.in: Merge fix and
	  adapt testcase for it from XS Search::Xapian:
	  [Changes contributed by David F. Skoll and Dave O'Neill]
	  - Tell DynaLoader to load the module with RTLD_GLOBAL so exceptions
	    still work when multiple Perl modules which link to xapian-core are
	    loaded.  (ticket#522)

Tue Dec 14 02:46:52 GMT 2010  Olly Betts <olly@survex.com>

	* perl/util.i.in: Whitespace tweaks.

Mon Dec 13 20:22:13 GMT 2010  Richard Boulton <richard@tartarus.org>

	* python/pythontest2.py,python/util.i: Fix memory leak in
	  Enquire.get_matching_terms() method, and add coverage for this
	  method.  Check gc.get_objects() is the same before and after the
	  calls to get the matching terms; this failed before the fix.

Mon Dec 13 12:04:28 GMT 2010  Olly Betts <olly@survex.com>

	* php/docs/index.html: Document that iterators shouldn't be
	  dereferenced or advanced when at their end points (ticket#520).

Mon Dec 13 06:04:08 GMT 2010  Olly Betts <olly@survex.com>

	* php/util.i: Add commented out typemap for director support for
	  Compactor::resolve_duplicate_metadata().

Sat Dec 11 23:20:29 GMT 2010  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions: Remove PostingSource's serialise
	  method from the list as we %ignore it in xapian.i.

Sat Dec 11 10:31:30 GMT 2010  Olly Betts <olly@survex.com>

	* python/generate-python-exceptions,xapian.i: Wrap MatchSpy as a
	  director class so it can be subclassed in Python.
	* python/pythontest2.py: Add test that subclassing MatchSpy works.

Tue Dec 07 04:10:37 GMT 2010  Olly Betts <olly@survex.com>

	* python/pythontest2.py: Add regression test for last fix.

Tue Dec 07 03:10:24 GMT 2010  Olly Betts <olly@survex.com>

	* python/util.i: Fix memory leaks in typemaps which return Python
	  lists (reported by AlexB on #xapian).

Tue Dec 07 02:51:51 GMT 2010  Olly Betts <olly@survex.com>
